<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F6FBF6">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="242dp"
        android:layout_height="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/leaf"
        android:transitionName="logo_image"
        app:layout_constraintBottom_toTopOf="@+id/imgMoist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:tint="@color/green" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-thin"
        android:text="Greenhouse Data"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnWater"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        app:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_water"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgBtnSchedule"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_schedule"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imgMoist"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="244dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_moisture"
        app:tint="@color/blue" />

    <ImageView
        android:id="@+id/imgSun"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:tint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMoist"
        app:srcCompat="@drawable/ic_sun" />

    <ImageView
        android:id="@+id/imgTemp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSun"
        app:srcCompat="@drawable/ic_temp" />

    <TextView
        android:id="@+id/tvMoist"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="268dp"
        android:text="@string/moist"
        app:layout_constraintStart_toEndOf="@+id/imgMoist"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSun"
        android:layout_width="95dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/sun"
        app:layout_constraintStart_toEndOf="@+id/imgSun"
        app:layout_constraintTop_toBottomOf="@+id/tvMoist" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="84dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/temp"
        app:layout_constraintStart_toEndOf="@+id/imgTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvSun" />

    <TextView
        android:id="@+id/tvHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgSun"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edtHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvHours"
        app:layout_constraintTop_toTopOf="@+id/imgSun"
        android:text="0"/>

    <TextView
        android:id="@+id/tvMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHours"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="235dp"/>

    <EditText
        android:id="@+id/edtMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvMins"
        app:layout_constraintTop_toBottomOf="@+id/tvHours"
        android:layout_marginTop="20dp"
        android:text="0"/>

    <TextView
        android:id="@+id/tvSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMins"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="230dp"/>

    <EditText
        android:id="@+id/edtSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvSeconds"
        app:layout_constraintTop_toBottomOf="@+id/tvMins"
        android:layout_marginTop="20dp"
        android:text="0"/>

    <Button
        android:id="@+id/btnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeconds"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="245dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeconds"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="210dp"/>

    <ImageButton
        android:id="@+id/imgBtnLight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnSchedule"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/imgBtnWater"
        app:layout_constraintTop_toBottomOf="@+id/tvTemp"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_bulb"
        tools:ignore="SpeakableTextPresentCheck"/>


</androidx.constraintlayout.widget.ConstraintLayout>